<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>A ROS package for teleoperating DYNAMIXEL motors using keyboard input.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_sdk_examples</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamixel_sdk_examples</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamixel_sdk_examples</exec_depend>
</package>